--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,7 @@
         "php": "^7.1.3",
         "barryvdh/laravel-ide-helper": "^2.5",
         "fideloper/proxy": "^4.0",
+        "giggsey/libphonenumber-for-php": "^8.10",
         "laravel/framework": "5.7.*",
         "laravel/socialite": "^3.2",
         "laravel/tinker": "^1.0",
