--- a/composer.json
+++ b/composer.json
@@ -12,9 +12,11 @@
         "laravel/framework": "5.7.*",
         "laravel/socialite": "^3.2",
         "laravel/tinker": "^1.0",
-        "laravelcollective/html": "^5.7"
+        "laravelcollective/html": "^5.7",
+        "symfony/translation": "^4.2"
     },
     "require-dev": {
+        "barryvdh/laravel-debugbar": "^3.2",
         "beyondcode/laravel-dump-server": "^1.0",
         "filp/whoops": "^2.0",
         "fzaninotto/faker": "^1.4",
